@@ -22,9 +22,9 @@ class Welcome extends Application {
     function index() {
         $this->data['title'] = 'Jim\'s Joint!';
         $this->data['pagebody'] = 'welcome';
-
+        
         // Get all the completed orders
-        //FIXME
+        $completed = $this->orders->some('status','c');
 
         // Build a multi-dimensional array for reporting
         $orders = array();
